[package]
name = "dumy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dumycmd"
path = "src/cmd.rs"

[[bin]]
name = "dumypwsh"
path = "src/powershell.rs"

[features]
default = []
no-console = ["dep:log_x", "dep:log"]

[dependencies]
encoding_rs = "0.8"
log_x = { git = "https://github.com/arloor/rust_http_proxy.git", optional = true }
log = { version = "0.4", optional = true }
